# HailMary-Backend

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: backend-up.md
.github/workflows/: deploy-fortuneteller.yml  deploy-staging.yml  deploy.yml
alembic/: env.py
alembic/versions/: 4dda5005e680_add_payment_method_columns.py  5be401e219be_make_name_required.py  8428a40138c0_init_user_domain.py  a1b2c3d4e5f6_add_user_session_token.py  a5b1fc5db05b_add_payments_table.py  b2c3d4e5f7a8_add_user_character_id_and_created_at.py  c3d4e5f8a9b0_add_paid_report_table.py  d4e5f8a9b0c1_add_user_id_to_payment.py  f3b6ba2f1b8e_add_share_code_to_paid_report.py
app/: main.py
app/domains/qa_auth/: __init__.py  router.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: base.py  session.py
app/middleware/: qa_auth.py
docs/payments/: 1. toss-v2-migration.md  2. toss-v2-e2e-testing.md  3. payment-method-schema.md  4. toss-v2-migration-retrospective.md  5. confirm-422-userid-fix-plan.md  6. payment-completed-backend-amplitude.md
fortuneteller-main/: .claudeignore  .dockerignore  .gitignore  .npmignore  .smitheryignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  install.sh  jest.config.js  package-lock.json  package.json  railway.json  smithery.yaml  tsconfig.json  typedoc.json
fortuneteller-main/.claude/: settings.local.json
fortuneteller-main/docs/: ARCHITECTURE.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
fortuneteller-main/examples/: interpretation_settings_demo.ts  yongsin_algorithms_demo.ts  yongsin_quick_test.ts
fortuneteller-main/scripts/: generate_solar_terms.ts  generate_solar_terms_2020_2030.ts
fortuneteller-main/src/: index.ts  server-http.ts  smithery.ts
fortuneteller-main/src/core/: server.ts  (+2 more)
fortuneteller-main/tests/: jdn-verification.test.ts  kasi-anchor-verification.test.ts  sin_sal.test.ts  solar-terms-verification.test.ts
tests/: conftest.py
(+172 files in other folders)
