[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "hailmary-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncmy>=0.2.9",
    "greenlet>=3.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI는 Depends/Body/Query 등을 default 인자로 사용하는 표준 패턴
# UP042: SQLAlchemy Enum 매핑 호환을 위해 str+Enum 다중상속이 필요
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
